--- a/style.css
+++ b/style.css
@@ -22,6 +22,24 @@ body {
     text-align: center;
     align-items: center;
     flex-direction: column;
+    -webkit-tap-highlight-color: rgba(26, 160, 89, 0.25);
+}
+
+::-moz-selection {
+    /* Code for Firefox */
+    background: rgba(26, 160, 89, 0.25);
+}
+
+::selection {
+    background: rgba(26, 160, 89, 0.25);
+}
+
+img,
+button {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 ul {
