--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     background-color: #0e1012;
     color: var(--white);
     height: 100vh;
+    min-height: 100vh;
     position: relative;
     display: flex;
     justify-content: center;
@@ -130,7 +131,9 @@ ul li span.highlight {
 }
 
 .drag-text {
-    height: 100vh;
+    height: 100%;
+    margin: 0;
+    padding: 0;
     font-size: 3rem;
     display: flex;
     justify-content: center;
@@ -150,4 +153,33 @@ ul li span.highlight {
     max-width: 200px;
     margin: auto;
     padding: 20px;
+}
+
+.controls {
+    display: inline;
+}
+
+.up,
+.down {
+    font-size: 28px;
+    color: var(--white);
+    background-color: #15824B;
+    outline: none;
+    border: none;
+    padding: 20px;
+    border-radius: 20px;
+}
+
+.up:active,
+.down:active {
+    background-color: var(--white);
+    color: #15824B;
+}
+
+.down {
+    transform: rotate(90deg) scale(0.6);
+}
+
+.up {
+    transform: rotate(-90deg) scale(0.6);
 }
