--- a/style.css
+++ b/style.css
@@ -196,7 +196,8 @@ input[type="text"] {
     width: 40px;
 }
 
-input[type="text"]:focus {
+input[type="text"]:focus,
+button:focus {
     box-shadow: 0 0 0 2px rgba(31, 178, 100, 0.4);
     transition: .1s;
 }
