--- a/style.css
+++ b/style.css
@@ -211,6 +211,7 @@ input[type="text"]::placeholder {
 
 .codeSnippetOutput {
     display: flex;
+    position: relative;
     font-family: 'Source Code Pro', monospace;
     width: 700px;
     max-width: 100vw;
@@ -222,10 +223,10 @@ input[type="text"]::placeholder {
     text-align: left;
     align-items: center;
     justify-content: center;
-    margin: 0 auto;
+    margin: 20px auto 10px auto;
 }
 
-.codeSnippetOutput div {
+.codeSnippetOutput .snippet {
     width: 98%;
 }
 
@@ -239,4 +240,31 @@ input[type="text"]::placeholder {
 
 .codeSnippetOutput .color3 {
     color: #FF79C6
+}
+
+.codeSnippetOutput .color4 {
+    color: #5C6B9A
+}
+
+.codeSnippetOutput .circles {
+    position: absolute;
+    top: 0;
+    margin: 0;
+    padding: 0;
+}
+
+.codeSnippetOutput .circles span {
+    padding-right: 3px;
+}
+
+.codeSnippetOutput .circles span:nth-of-type(1) {
+    color: #FF5F56;
+}
+
+.codeSnippetOutput .circles span:nth-of-type(2) {
+    color: #FFBD2E;
+}
+
+.codeSnippetOutput .circles span:nth-of-type(3) {
+    color: #27C93F;
 }
