--- a/style.css
+++ b/style.css
@@ -268,3 +268,22 @@ input[type="text"]::placeholder {
 .codeSnippetOutput .circles span:nth-of-type(3) {
     color: #27C93F;
 }
+
+.clipboard * {
+    position: absolute;
+    top: 10px;
+    right: 16px;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+}
+
+.clipboard .tick {
+    right: 23px;
+    top: 13px;
+    color: #45F072;
+    background-color: #282A36;
+    font-size: 12px;
+    padding: 0 2px;
+    display: none;
+}
